Refactor/dave 200 anbindung feature service messstelle (#144)
* an neue GEODATENEAI-API angepasst

* update spring boot and mapstruct

* add aop for logging metrics

* add changed geodataeai

* adapt openapi file

* reformat code

* rafctor method to load messwerte

* reformat code

* reformat code

* adapt logic

* add some logic

* sicherung

* remove unused method

* add unit test and adapt unit tests

* add unit test

* add unit test

* add unit tests and adapt logic

* add unit tests

* reformat enums

* add unit test

* add unit test

* add unit tests

* add unit test and adapt logic in calculation method

* refactor code

* add unit test and adapt logic in calculation method

* add unit test and adapt logic in calculation method

* add unit test and refactpr mapper

* add unit test

* add unit test

* add unit test

* add unit test

* add unit test

* adapt logic

* change logic listenausgabe

* add unit test

* add unit test

* add unit test

* add unit test

* add unit test

* add unit test

* add unit test

* add unit test

* add unit test

* add unit test ganglinie

* add unit test

* add unit test

* add unit tes

* refactor code

* refactor code

* refactor code

* reformat code

* add reformat code

* refactor code

* refactor code

* fix unit test

* fix unit test

* adapt code in listenausgabe

* adapt code in listenausgabe

* remove settings of attribute

* add docs

* add docs

* add tagestyp

* change api

* reformat code

* remove file

* add logic to avoid nullpointerexception

* add logic to avoid nullpointerexception

* fix unit test

* fix bug in logic of suche mapper

* fix bug in logic of suche mapper

* fix bug in logic of suche mapper

* fix bug in logic of suche mapper

* fix test

* only add unbekannt if not status == abgebaut

* fix LocaDate.max error

* add unspecified to tagestyp

* a