@@ -1,15 +1,15 @@
 package de.muenchen.dave.services;
 
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.equalTo;
-import static org.hamcrest.Matchers.is;
-
 import com.google.common.collect.Lists;
 import de.muenchen.dave.domain.dtos.ZaehlartenKarteDTO;
 import de.muenchen.dave.domain.elasticsearch.Zaehlstelle;
 import de.muenchen.dave.domain.elasticsearch.Zaehlung;
 import de.muenchen.dave.domain.enums.Zaehlart;
 import de.muenchen.dave.util.SuchwortUtil;
+import lombok.extern.slf4j.Slf4j;
+import org.junit.jupiter.api.Test;
+import org.springframework.data.elasticsearch.core.geo.GeoPoint;
+
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -18,14 +18,15 @@ import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 import java.util.TreeSet;
-import lombok.extern.slf4j.Slf4j;
-import org.junit.jupiter.api.Test;
-import org.springframework.data.elasticsearch.core.geo.GeoPoint;
+
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.equalTo;
+import static org.hamcrest.Matchers.is;
 
 @Slf4j
 public class SucheServiceTests {
 
-    private SucheService service = new SucheService(
+    private final SucheService service = new SucheService(
             null,
             null,
             null,
@@ -68,7 +69,7 @@ public class SucheServiceTests {
         ZaehlartenKarteDTO zaehlartenKarte = new ZaehlartenKarteDTO();
         zaehlartenKarte.setLatitude(1.0);
         zaehlartenKarte.setLongitude(2.0);
-        zaehlartenKarte.setZaehlarten(new TreeSet<>(Arrays.asList("H")));
+        zaehlartenKarte.setZaehlarten(new TreeSet<>(List.of("H")));
         expected.add(zaehlartenKarte);
 
         zaehlartenKarte = new ZaehlartenKarteDTO();
