@@ -1,15 +1,5 @@
 package de.muenchen.dave.spring.services;
 
-import static de.muenchen.dave.TestConstants.SPRING_NO_SECURITY_PROFILE;
-import static de.muenchen.dave.TestConstants.SPRING_TEST_PROFILE;
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.equalTo;
-import static org.hamcrest.Matchers.is;
-import static org.hamcrest.Matchers.notNullValue;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.Mockito.when;
-
 import de.muenchen.dave.DaveBackendApplication;
 import de.muenchen.dave.domain.dtos.BearbeiteZaehlstelleDTORandomFactory;
 import de.muenchen.dave.domain.dtos.NextZaehlstellennummerDTO;
@@ -27,9 +17,6 @@ import de.muenchen.dave.repositories.elasticsearch.CustomSuggestIndex;
 import de.muenchen.dave.repositories.elasticsearch.MessstelleIndex;
 import de.muenchen.dave.repositories.elasticsearch.ZaehlstelleIndex;
 import de.muenchen.dave.services.ZaehlstelleIndexService;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
 import lombok.extern.slf4j.Slf4j;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -38,6 +25,20 @@ import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.test.context.ActiveProfiles;
+
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+
+import static de.muenchen.dave.TestConstants.SPRING_NO_SECURITY_PROFILE;
+import static de.muenchen.dave.TestConstants.SPRING_TEST_PROFILE;
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.equalTo;
+import static org.hamcrest.Matchers.is;
+import static org.hamcrest.Matchers.notNullValue;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.when;
 
 @SpringBootTest(
         classes = { DaveBackendApplication.class }, webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT, properties = {
@@ -129,7 +130,7 @@ public class ZaehlstelleIndexServiceSpringTest {
         final Zaehlstelle zaehlstelle1 = ZaehlstelleRandomFactory.getOne();
         zaehlstelle1.setNummer("120105");
         zaehlstelle1.setStadtbezirkNummer(12);
-        when(zaehlstelleIndex.findAllByNummerStartsWithAndStadtbezirkNummer("1201", 12)).thenReturn(Arrays.asList(zaehlstelle1));
+        when(zaehlstelleIndex.findAllByNummerStartsWithAndStadtbezirkNummer("1201", 12)).thenReturn(List.of(zaehlstelle1));
         final NextZaehlstellennummerDTO nextCurrentNumber = this.service.getNextZaehlstellennummer("1201", 12);
         assertThat(nextCurrentNumber, is(notNullValue()));
         assertThat(nextCurrentNumber.getNummer(), is(equalTo("120106")));
